[gd_scene load_steps=20 format=2]

[ext_resource path="res://addons/godot_ovrmobile/example_scenes/ARVROriginWithInitAndMovement.gd" type="Script" id=1]
[ext_resource path="res://objects/room.tscn" type="PackedScene" id=2]
[ext_resource path="res://objects/touch_controller.tscn" type="PackedScene" id=3]
[ext_resource path="res://objects/dart.tscn" type="PackedScene" id=4]
[ext_resource path="res://scripts/main.gd" type="Script" id=5]
[ext_resource path="res://objects/board.tscn" type="PackedScene" id=6]
[ext_resource path="res://objects/board2.tscn" type="PackedScene" id=7]
[ext_resource path="res://objects/scene.tscn" type="PackedScene" id=8]

[sub_resource type="QuadMesh" id=1]

[sub_resource type="BoxShape" id=2]
extents = Vector3( 1.8045, 1.50946, 0.0940266 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 0.112739, 1.65467, 4.34181 )

[sub_resource type="BoxShape" id=4]
extents = Vector3( 1.93856, 0.162206, 4.34181 )

[sub_resource type="CubeMesh" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.337255, 0.0627451, 0.0627451, 1 )

[sub_resource type="CylinderShape" id=7]
radius = 0.25
height = 0.0373256

[sub_resource type="Environment" id=8]
ambient_light_color = Color( 0.823529, 0.654902, 0.760784, 1 )
ambient_light_energy = 2.57
dof_blur_far_distance = 0.61
dof_blur_near_enabled = true
dof_blur_near_distance = 0.96
dof_blur_near_transition = 1.13
glow_intensity = 1.23
glow_strength = 1.16
glow_bloom = 0.05
glow_blend_mode = 1
adjustment_brightness = 0.93
adjustment_contrast = 1.07

[sub_resource type="DynamicFontData" id=9]
font_path = "res://fonts/unispace bd.ttf"

[sub_resource type="DynamicFont" id=10]
size = 29
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = SubResource( 9 )

[sub_resource type="ViewportTexture" id=11]
viewport_path = NodePath("zoom/Viewport")

[node name="main" type="Spatial"]
script = ExtResource( 5 )

[node name="ARVROriginWithInitAndMovement" type="ARVROrigin" parent="."]
script = ExtResource( 1 )

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROriginWithInitAndMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72656, 0 )

[node name="LeftTouchController" type="ARVRController" parent="ARVROriginWithInitAndMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.2, 1.72656, -0.4 )

[node name="left-controller" parent="ARVROriginWithInitAndMovement/LeftTouchController" instance=ExtResource( 3 )]
transform = Transform( -1, 8.74228e-08, -8.74228e-08, 8.74228e-08, 1, 0, 8.74228e-08, -7.64274e-15, -1, 0, 0, 0 )

[node name="RightTouchController" type="ARVRController" parent="ARVROriginWithInitAndMovement"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
controller_id = 2

[node name="right-controller" parent="ARVROriginWithInitAndMovement/RightTouchController" instance=ExtResource( 3 )]
transform = Transform( 1, 0, -8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, 0, 0, 0 )

[node name="pos" type="Position3D" parent="ARVROriginWithInitAndMovement/RightTouchController"]
transform = Transform( 1, 0, 0, 0, 0.782152, 0.623088, 0, -0.623088, 0.782152, 0, 0, -0.0123481 )

[node name="DirectionalLight" type="DirectionalLight" parent="ARVROriginWithInitAndMovement"]
transform = Transform( 0.69034, -0.60925, 0.390186, 0, 0.539315, 0.842104, -0.723485, -0.581338, 0.37231, 11.3401, 0, 2.30789 )

[node name="darts" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -8.74207, 0 )

[node name="dart0" parent="darts" instance=ExtResource( 4 )]
visible = false

[node name="dart1" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart2" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart3" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart4" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart5" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart6" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart7" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart8" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart9" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart10" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart11" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart12" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart13" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="dart14" parent="darts" instance=ExtResource( 4 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.2, 1.72656, -0.4 )
visible = false

[node name="room" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.22, 0, 0, 0, 0.22, 0, 0, 0, 0.22, 0, 0, 0.924 )

[node name="StaticBody" type="StaticBody" parent="room"]
transform = Transform( 4.54545, 0, 0, 0, 4.54545, 0, 0, 0, 4.54545, 0, 0, -15.5039 )

[node name="MeshInstance" type="MeshInstance" parent="room/StaticBody"]
transform = Transform( 14.0763, 0, 0, 0, 14.0763, 0, 0, 0, 14.0763, 0, 0, 0 )
visible = false
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="room/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.170935, 1.26053, -0.101916 )
shape = SubResource( 2 )

[node name="CollisionShape4" type="CollisionShape" parent="room/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.170935, 1.26053, 5.29657 )
shape = SubResource( 2 )

[node name="CollisionShape2" type="CollisionShape" parent="room/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.42786, 1.34702, 2.57914 )
shape = SubResource( 3 )

[node name="CollisionShape3" type="CollisionShape" parent="room/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.91478, 1.34702, 2.57914 )
shape = SubResource( 3 )

[node name="CollisionShape5" type="CollisionShape" parent="room/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.219774, -0.117213, 2.5037 )
shape = SubResource( 4 )

[node name="CollisionShape6" type="CollisionShape" parent="room/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.219774, 2.71932, 2.5037 )
shape = SubResource( 4 )

[node name="MeshInstance" type="MeshInstance" parent="room"]
transform = Transform( 1.82228, 0, 0, 0, 0.0589068, 0, 0, 0, 0.260812, 0, -0.0391684, -4.2274 )
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="board" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.75, -2.49629 )

[node name="boardStatic" type="StaticBody" parent="board" groups=[
"board",
]]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00341704, 0.00569916, 0.0217867 )

[node name="CollisionShape" type="CollisionShape" parent="board/boardStatic"]
shape = SubResource( 7 )

[node name="s50" type="Position3D" parent="board/boardStatic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.013522 )

[node name="s25" type="Position3D" parent="board/boardStatic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.0250545 )

[node name="sInner" type="Position3D" parent="board/boardStatic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.12353 )

[node name="sX3" type="Position3D" parent="board/boardStatic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.13656 )

[node name="sOuter" type="Position3D" parent="board/boardStatic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.187412 )

[node name="sX2" type="Position3D" parent="board/boardStatic"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.203939 )

[node name="zoom" type="Spatial" parent="."]

[node name="Viewport" type="Viewport" parent="zoom"]
size = Vector2( 800, 700 )
handle_input_locally = false
msaa = 4
render_target_v_flip = true
render_target_update_mode = 3

[node name="Camera" type="Camera" parent="zoom/Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.72331, -1.81839 )
environment = SubResource( 8 )
fov = 49.9

[node name="Control" type="Control" parent="zoom/Viewport"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="zoom/Viewport/Control"]
modulate = Color( 0.0980392, 1, 0.0705882, 1 )
margin_left = 50.0
margin_top = 50.0
margin_right = 106.0
margin_bottom = 98.0
custom_fonts/font = SubResource( 10 )
text = "Test text
___________
Score: ???"

[node name="scene" parent="." instance=ExtResource( 8 )]
transform = Transform( -0.00212132, 1.85452e-10, 0.00212132, -2.62268e-10, -0.003, 0, 0.00212132, -1.85452e-10, 0.00212132, -0.825068, 2.61237, -0.839525 )

[node name="Sprite3D" type="Sprite3D" parent="scene"]
transform = Transform( -43.0707, 6.50349e-06, 0, -6.50349e-06, -43.0707, 2.27374e-13, 0, -1.81899e-12, 43.0707, -3.05176e-05, 222.747, 32.8173 )
modulate = Color( 0.980392, 0.980392, 0.980392, 1 )
texture = SubResource( 11 )

[node name="board2" parent="." instance=ExtResource( 7 )]
transform = Transform( 0.015, 0, 0, 0, 0.015, 0, 0, 0, 0.015, 0.0535007, 1.80529, -2.42248 )
[connection signal="button_pressed" from="ARVROriginWithInitAndMovement/LeftTouchController" to="ARVROriginWithInitAndMovement" method="_on_LeftTouchController_button_pressed"]
[connection signal="button_pressed" from="ARVROriginWithInitAndMovement/RightTouchController" to="ARVROriginWithInitAndMovement" method="_on_RightTouchController_button_pressed"]
[connection signal="button_release" from="ARVROriginWithInitAndMovement/RightTouchController" to="ARVROriginWithInitAndMovement" method="_on_RightTouchController_button_release"]
